--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="element">
         <img src="imagens/jovem-casal-feliz-apertando-as-maos-com-agente-de-seguros-durante-uma-reuniao-no-escritorio.jpg" alt="casal sorrindo" class="casal">
     </div>
-    <div class="contactinfo">
+    <div class="element">
         <h1 class="tituloform">Aqui o limite do seu cartão de crédito vira dinheiro na hora!</h1> 
         <br> <br>
         <h4>
