--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             Quinta-feira 09:00–18:00 <br>
             Sexta-feira 09:00-18:00 <br>
             Sábado 09:00–12:00 
+            Domingo Fechadog
         </p>
     </div>
 </div>
