--- a/index.html
+++ b/index.html
@@ -48,27 +48,26 @@
 </div>
 <hr>
 
-<div class="container2">
-    <div><h1>Como funciona:</h1></div>
-    <div class="container">
-        <div class="row align-items-center justify-content-center">
-          <div class="col-sm text-center">
-            <img src="imagens/whatsapp.png" alt="icone" class="icone"> <br>
-            Faça o seu pedido
-            Fale no WhatsApp em uma de nossas unidades ou preencha o formulário aqui no site
-          </div>
-          <div class="col-sm text-center">
-            <img src="imagens/credit-card.png" alt="icone" class="icone"> <br>
-            Escolha a melhor oferta e parcelas que cabem no seu bolso
-          </div>
-          <div class="col-sm text-center">
-            <img src="imagens/money-bag.png" alt="icone" class="icone"> <br>
-            Receba o dinheiro na conta
-            Pronto! Com o  seu empréstimo aprovado, o seu dinheiro cai na conta em até 30 minutos!
-          </div>
-        </div>
-      </div>
+<div class="container">
+  <div><h1 class="text-center">Como funciona:</h1></div>
+  <div class="row align-items-center justify-content-center">
+    <div class="col-sm-12 col-md-4 text-center">
+      <img src="imagens/whatsapp.png" alt="icone" class="icone"> <br>
+      Faça o seu pedido
+      Fale no WhatsApp em uma de nossas unidades ou preencha o formulário aqui no site
+    </div>
+    <div class="col-sm-12 col-md-4 text-center">
+      <img src="imagens/credit-card.png" alt="icone" class="icone"> <br>
+      Escolha a melhor oferta e parcelas que cabem no seu bolso
+    </div>
+    <div class="col-sm-12 col-md-4 text-center">
+      <img src="imagens/money-bag.png" alt="icone" class="icone"> <br>
+      Receba o dinheiro na conta
+      Pronto! Com o seu empréstimo aprovado, o seu dinheiro cai na conta em até 30 minutos!
+    </div>
+  </div>
 </div>
+
 <hr>
 
 <div class="beneficios text-center"><h1>Quais são os benefícios do empréstimo no cartão de crédito?</h1></div>
@@ -107,71 +106,80 @@
 </div>
 
 <div class="container">
-    <div class="element">
-        <img src="imagens/jovem-casal-feliz-apertando-as-maos-com-agente-de-seguros-durante-uma-reuniao-no-escritorio.jpg" alt="casal sorrindo" class="casal">
+  <div class="row">
+    <div class="col-sm-12 col-md-6">
+      <img src="imagens/jovem-casal-feliz-apertando-as-maos-com-agente-de-seguros-durante-uma-reuniao-no-escritorio.jpg" alt="casal sorrindo" class="img-fluid">
     </div>
-    <div class="element">
-        <h1 class="tituloform">Aqui o limite do seu cartão de crédito vira dinheiro na hora!</h1> 
-        <br> <br>
-        <h4>
-            <img src="imagens/whatsapp.png" alt="whatsapp" class="contato">
-            ENTRE EM CONTATO</h4>
-            <p class="numerotelefone">(61)98292-7048</p>
-        <h4>
-            <img src="imagens/pin.png" alt="localizacao" class="contato">
-            LOCALIZAÇÃO
-        </h4>
-        <p> C9, Lote 1, Sala 102 - Taguatinga Centro </p>
-        <h4>
-            <img src="imagens/sentido-anti-horario.png" alt="horario" class="contato">
-            HORÁRIO DE FUNCIONAMENTO
-        </h4>
-        <p>Segunda-feira 09:00–18:00 <br>
-            Terça-feira 09:00–18:00 <br>
-            Quarta-feira 09:00–18:00 <br>
-            Quinta-feira 09:00–18:00 <br>
-            Sexta-feira 09:00-18:00 <br>
-            Sábado 09:00–12:00 
-            Domingo Fechado
-        </p>
+    <div class="col-sm-12 col-md-6">
+      <h1 class="tituloform">Aqui o limite do seu cartão de crédito vira dinheiro na hora!</h1>
+      <br> <br>
+      <h4>
+        <img src="imagens/whatsapp.png" alt="whatsapp" class="contato">
+        ENTRE EM CONTATO
+      </h4>
+      <p class="numerotelefone">(61) 98292-7048</p>
+      <h4>
+        <img src="imagens/pin.png" alt="localizacao" class="contato">
+        LOCALIZAÇÃO
+      </h4>
+      <p>C9, Lote 1, Sala 102 - Taguatinga Centro</p>
+      <h4>
+        <img src="imagens/sentido-anti-horario.png" alt="horario" class="contato">
+        HORÁRIO DE FUNCIONAMENTO
+      </h4>
+      <p>Segunda-feira 09:00–18:00<br>
+        Terça-feira 09:00–18:00<br>
+        Quarta-feira 09:00–18:00<br>
+        Quinta-feira 09:00–18:00<br>
+        Sexta-feira 09:00-18:00<br>
+        Sábado 09:00–12:00<br>
+        Domingo Fechado</p>
     </div>
+  </div>
 </div>
+
 <hr>
 
-<div class="faq-section">
-    <h2 class="perguntas">Perguntas Frequentes</h2>
-    <div class="accordion accordion-flush" id="accordionFlushExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingOne">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                A Equipe Cred realiza consulta ao SPC ou Serasa?
-            </button>
-          </h2>
-          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Os empréstimos são realizados através do cartão de crédito do cliente, dessa forma, não é necessário realizar consulta junto aos órgãos de proteção ao crédito, basta que possua o limite disponível. </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                A Equipe Cred realiza empréstimo online?
-            </button>
-          </h2>
-          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Prezando pela segurança de nossos clientes, a Equipe Cred não realiza empréstimo online e não solicita pagamentos antecipados, por tanto, nosso único meio de contratação é de forma presencial. </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                Quais os benefícios do empréstimo no cartão de crédito?
-            </button>
-          </h2>
-          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Taxas acessíveis, empréstimo sem burocracia, dinheiro na hora, dinheiro no bolso para investimentos ou pagamento de contas.</div>
-          </div>
+<div class="faq-section container">
+  <h2 class="perguntas text-center">Perguntas Frequentes</h2>
+  <div class="accordion accordion-flush" id="accordionFlushExample">
+    <div class="accordion-item col">
+      <h2 class="accordion-header" id="flush-headingOne">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+          A Equipe Cred realiza consulta ao SPC ou Serasa?
+        </button>
+      </h2>
+      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">
+          Os empréstimos são realizados através do cartão de crédito do cliente, dessa forma, não é necessário realizar consulta junto aos órgãos de proteção ao crédito, basta que possua o limite disponível.
         </div>
       </div>
+    </div>
+    <div class="accordion-item col">
+      <h2 class="accordion-header" id="flush-headingTwo">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+          A Equipe Cred realiza empréstimo online?
+        </button>
+      </h2>
+      <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">
+          Prezando pela segurança de nossos clientes, a Equipe Cred não realiza empréstimo online e não solicita pagamentos antecipados, portanto, nosso único meio de contratação é de forma presencial.
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item col">
+      <h2 class="accordion-header" id="flush-headingThree">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+          Quais os benefícios do empréstimo no cartão de crédito?
+        </button>
+      </h2>
+      <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">
+          Taxas acessíveis, empréstimo sem burocracia, dinheiro na hora, dinheiro no bolso para investimentos ou pagamento de contas.
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <footer class="rodape">
