--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Descrição da página que contém palavras-chave relevantes e informações atraentes." />
-    <title>Equipe Cred</title>
+    <title>Real Master</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
     </style>
@@ -25,7 +26,7 @@
 <div class="container">
     <div class="element">
         <img src="imagens/logoequipe.png" alt="logo" class="logo">
-        <h1 class="tituloprincipal">Empréstimo rápido e seguro apenas na Equipe Cred</h1>
+        <h1 class="tituloprincipal">Seu limite do cartão de crédito vira dinheiro na hora</h1>
         <br>
         <p class="subtitulo">faça já uma simulação de empreéstimo no cartão <br> de crédito  com as melhores taxas do mercado!</p>
         <br>
@@ -41,9 +42,11 @@
 </div>
 
 <div class="container">
-    <div class="element"><h1 class="equipecred">Conheça a <br> Equipe Cred</h1></div>
-    <div class="element"><p>A Company Cred atua há mais de 10 anos em diversos estados do Brasil com as melhores condições de empréstimo para nossos clientes.
-             Sem Burocracia, consulta ao Serasa ou SPC, se você precisa de dinheiro de forma fácil e rápida, aqui você garante o seu empréstimo na hora. </p>
+    <div class="element"><h1 class="equipecred">Conheça a <br> Real Master</h1></div>
+    <div class="element"><p>A Real Master atua há mais de 8 anos no Distrito Federal com as melhores condições de empréstimo para nossos clientes. 
+      Visamos intermediar empréstimos com cartão de crédito de maneira fácil,  rápida, segura e
+      sem burocracia. <br>
+      Tendo como objetivo oferecer as melhores taxas e um bom atendimento aos nossos clientes para que possam arcar com seus compromissos e realizar seus projetos. </p>
     </div>
 </div>
 <hr>
@@ -53,17 +56,15 @@
   <div class="row align-items-center justify-content-center">
     <div class="col-sm-12 col-md-4 text-center">
       <img src="imagens/whatsapp.png" alt="icone" class="icone"> <br>
-      Faça o seu pedido
-      Fale no WhatsApp em uma de nossas unidades ou preencha o formulário aqui no site
+      Entre em contato com um des nossos representantes ou vá até uma de nossa unidades, escolha a melhor oferta e parcela que caiba no seu bolso.
     </div>
     <div class="col-sm-12 col-md-4 text-center">
       <img src="imagens/credit-card.png" alt="icone" class="icone"> <br>
-      Escolha a melhor oferta e parcelas que cabem no seu bolso
+      Utilize o limite desejado ou disponível do seu cartão de crédito em nossa máquina.
     </div>
     <div class="col-sm-12 col-md-4 text-center">
       <img src="imagens/money-bag.png" alt="icone" class="icone"> <br>
-      Receba o dinheiro na conta
-      Pronto! Com o seu empréstimo aprovado, o seu dinheiro cai na conta em até 30 minutos!
+      Com o seu empréstimo aprovado, o seu dinheiro cai na sua conta em até 30 minutos
     </div>
   </div>
 </div>
@@ -75,19 +76,19 @@
     <div class="card shadow custom-card row align-items-center justify-content-center text-center ">
       <img src="imagens/verificacao-da-lista-da-area-de-transferencia.png" alt="Imagem de capa do card" class="icone">
       <div class="card-body2">
-        <p class="card-text">Empréstimos no cartão de crédito com agilidade e praticidade.</p>
+        <p class="card-text">Empréstimos com cartão de crédito possuem mais agilidade e praticidade.</p>
       </div>
     </div>
     <div class="card shadow custom-card row align-items-center justify-content-center text-center">
       <img src="imagens/verificacao-da-lista-da-area-de-transferencia.png" alt="Imagem de capa do card" class="icone">
       <div class="card-body2">
-        <p class="card-text">Empréstimos no cartão de crédito com dinheiro em mãos em apenas 30 minutos.</p>
+        <p class="card-text">O dinheiro cai na sua conta em até 30 minutos.</p>
       </div>
     </div>
     <div class="card shadow custom-card row align-items-center justify-content-center text-center">
       <img src="imagens/verificacao-da-lista-da-area-de-transferencia.png" alt="Imagem de capa do card" class="icone">
       <div class="card-body2">
-        <p class="card-text">Sem consulta ao SPC e Serasa</p>
+        <p class="card-text">Não fazemos consulta no SPC e Serasa.</p>
       </div>
     </div>
   </div>
@@ -146,36 +147,36 @@
     <div class="accordion-item col">
       <h2 class="accordion-header" id="flush-headingOne">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-          A Equipe Cred realiza consulta ao SPC ou Serasa?
+          Quanto posso pegar emprestado com o cartão de crédito?
         </button>
       </h2>
       <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
         <div class="accordion-body">
-          Os empréstimos são realizados através do cartão de crédito do cliente, dessa forma, não é necessário realizar consulta junto aos órgãos de proteção ao crédito, basta que possua o limite disponível.
+          É usando o limite do seu cartão de crédito como garantia que poderemos liberar o seu dinheiro na hora. Quanto mais limite disponível você tiver no cartão de crédito, maior pode ser o valor do empréstimo.
         </div>
       </div>
     </div>
     <div class="accordion-item col">
       <h2 class="accordion-header" id="flush-headingTwo">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-          A Equipe Cred realiza empréstimo online?
+          A Real Master solicita dinheiro antecipado?
         </button>
       </h2>
       <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
         <div class="accordion-body">
-          Prezando pela segurança de nossos clientes, a Equipe Cred não realiza empréstimo online e não solicita pagamentos antecipados, portanto, nosso único meio de contratação é de forma presencial.
+          A Real Master não solicita a nenhum de seus clientes pagamentos antecipados.
         </div>
       </div>
     </div>
     <div class="accordion-item col">
       <h2 class="accordion-header" id="flush-headingThree">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-          Quais os benefícios do empréstimo no cartão de crédito?
+          A Real Master realiza empréstimo online?
         </button>
       </h2>
       <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
         <div class="accordion-body">
-          Taxas acessíveis, empréstimo sem burocracia, dinheiro na hora, dinheiro no bolso para investimentos ou pagamento de contas.
+          No momento a única forma de contratar o empréstimo com o cartão de crédito na Real Master é de forma presencial.
         </div>
       </div>
     </div>
@@ -203,6 +204,11 @@
     O atraso no pagamento das prestações do seu pagamento pessoal pode ter como consequência a inclusão do seu nome nos cadastros de inadimplentes dos órgãos de proteção ao crédito, o protesto de títulos e, ainda, o ajuizamento de ações judiciais de cobrança, dentre outras. Para evitar maiores problemas e restrições ao seu crédito, mantenha sempre o pagamento de suas parcelas em dia.
     </p>
 </footer>
+
+<a href="https://api.whatsapp.com/send?phone=5561982927040" target="_blank" rel="noopener noreferrer" class="whatsapp-float">
+  <i class="fab fa-whatsapp whatsapp-icon"></i>
+</a>
+
   
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
