--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img src="imagens/logoequipe.png" alt="logo" class="logo">
         <h1 class="tituloprincipal">Seu limite do cartão de crédito vira dinheiro na hora</h1>
         <br>
-        <p class="subtitulo">faça já uma simulação de empreéstimo no cartão <br> de crédito  com as melhores taxas do mercado!</p>
+        <p class="subtitulo">Faça já uma simulação de empreéstimo no cartão <br> de crédito  com as melhores taxas do mercado!</p>
         <br>
         <div>
             <a href="https://api.whatsapp.com/send?phone=5561982927048" target="_blank">
@@ -185,25 +185,27 @@
 
 <footer class="rodape">
     <p class="paragraforodape">
-    Prazo de parcelamento:
-    01 mês a 12 meses.
+    Prazo de parcelamento: <br>
+    01 mês a 12 meses. <br> <br>
 
-    As taxas de parcelamento (CET):
+    As taxas de parcelamento (CET): <br>
     podem variar de 1,13% a.m. (14,40% a.a.) até 17,90% a.m (621.38% % a.a.), à depender de variáveis ecônomicas (Risco Brasil, Taxa de Juros Selic, inflação, inadimplência geral e outros). Exemplo: Um empréstimo de R$ 10.000,00 em 12 meses terá́ parcelas de R$ 618,48, um valor total de R$ 14.843,52, juros de 3,4% a.m. (49,9% a.a.) e CET de 4,2% a.m (64,4% a.a.).
-
+    <br>
     Estes valores são exemplificativos e poderão variar de acordo com os critérios de aprovação de crédito da instituição financeira tais como suas finanças pessoais, histórico de crédito, convênios e demais dados informados. Antes de contratar o empréstimo, será exibido de forma clara: a taxa de parcelamento utilizada, a taxa de conveniência, o imposto (IOF) e o custo total do pagamento.
-
-    Informações Legais:
+    <br> <br>
+    Informações Legais: <br>
     O site www.limitenahora.com.br pertence e é operado por RIBAS DE ANDRADE CORRESPONDENTE BANCÁRIO LTDA., de nome fantasia LIMITE NA HORA, uma sociedade limitada registrada sob o CNPJ 43.539.643/0001-10, com sede na Av. Higienópolis, 32, sala 603, Município de Londrina, Estado do Paraná, CEP 86020-080.
-
+    <br>
     A Limite na Hora NÃO é uma financeira, é um correspondente bancário. Somos afiliados da HCRED Soluções Financeiras. Nossa parceira HCRED é distribuidora da GIRO TECH, esta devidamente registrada no Banco Central. Como correspondente bancário de diversas instituições financeiras, seguimos estritamente as diretrizes do Banco Central do Brasil, nos termos da Resolução nº. 3.954, de 24 de fevereiro de 2011.
-
+    <br>
     A Limite na Hora não cobra quaisquer valores diretamente dos clientes. Somos remunerados exclusivamente pelas instituições financeiras parceiras.
-
-    Atrasos no Pagamento:
+    <br>
+    Atrasos no Pagamento: <br> <br>
     O atraso no pagamento das prestações do seu pagamento pessoal pode ter como consequência a inclusão do seu nome nos cadastros de inadimplentes dos órgãos de proteção ao crédito, o protesto de títulos e, ainda, o ajuizamento de ações judiciais de cobrança, dentre outras. Para evitar maiores problemas e restrições ao seu crédito, mantenha sempre o pagamento de suas parcelas em dia.
     </p>
 </footer>
+
+<a href="https://github.com/anabeatrizzdm" class="creditos" target="_blank"><p> Desenvolvido por Ana Beatriz</p></a>
 
 <a href="https://api.whatsapp.com/send?phone=5561982927040" target="_blank" rel="noopener noreferrer" class="whatsapp-float">
   <i class="fab fa-whatsapp whatsapp-icon"></i>
